# optional_dep

./: .gitignore  MODULE.bazel  README.md  defs.bzl  extensions.bzl
tests/bcr/: .bazelignore  BUILD.bazel  MODULE.bazel
tests/bcr/dep/: BUILD.bazel  MODULE.bazel  greetings_test.sh
tests/bcr/optional_dep_1/: MODULE.bazel
tests/bcr/optional_dep_1/pkg/: BUILD.bazel  greeting.txt
tests/bcr/optional_dep_2/: MODULE.bazel
tests/bcr/optional_dep_2/pkg/: greeting.txt
